--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 
               <div class="contact-info">
                   <h2>Our Address</h2>
-                  <p>426 N Elgesh St, Gate 4 Hadayek Elahram</p>
+                  <a href="https://maps.app.goo.gl/yET9U19aXqi8xQAh9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
 
                   <h2>Phone</h2>
                   <p>+201222908983, +201143250666</p>
