--- a/index.html
+++ b/index.html
@@ -807,10 +807,10 @@
                   <a href="https://maps.app.goo.gl/yET9U19aXqi8xQAh9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
 
                   <h2>Phone</h2>
-                  <p>+201222908983, +201143250666</p>
+                  <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201143250666">+201143250666</a></p>
 
                   <h2>Tel</h2>
-                  <p>+233779974</p>
+                  <a href="tel:+233779974">+233779974</a>
 
                   <h2>Email</h2>
                   <p><a href="mailto:Info@Summittecs.com">Info@Summittecs.com</a></p>
