arrows index.html

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
           border-radius: 50%;
           color: rgb(214, 107, 0);
           font-size: 1.5em;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          padding-bottom: 25px;
           padding: 17px 15px 15px 15px;
           cursor: url(pointer.png), auto;
           transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
@@ -783,8 +783,8 @@
         </div>
         <!-- Navigation Arrows -->
         <div class="nav-arrows">
-            <button id="prev-arrow" style="left: 200px;">&#9664;</button>
-            <button id="next-arrow" style="right: 200px;">&#9654;</button>
+            <button id="prev-arrow" style="left: 200px;">←</button>
+            <button id="next-arrow" style="right: 200px;">→</button>
         </div>
     </section>    
       
