values index.html

--- a/index.html
+++ b/index.html
@@ -570,12 +570,12 @@
           font-size: 0.8em;
         }
         }
-       /* Core Values Container */
+      /* Core Values Container */
       .switching-container {
           position: relative;
-          width: 350px;
+          width: 400px;
           overflow: hidden;
-          height: 500px; /* Fixed height to ensure uniform appearance */
+          height: 650px; /* Fixed height to ensure uniform appearance */
           display: flex;
           align-items: center; /* Center vertically */
           justify-content: center; /* Center horizontally */
@@ -610,13 +610,15 @@
 
       /* Value Name */
       .valuename {
-          font-size: 1.8em;
+          font-size: 2em;
           color: #004d99;
           margin-bottom: 15px;
       }
 
       /* Value Image */
       .valueimg img {
+          width: 300px;
+          height: 260px;
           max-width: 300px;
           margin-bottom: 15px;
           border-radius: 10px;
@@ -624,11 +626,11 @@
 
       /* Value Description */
       .valuedisc {
-          font-size: 1.1em;
+          font-size: 1.3em;
           color: #666;
           line-height: 1.6;
       }
-
+      
       /* Navigation Arrows */
       .nav-arrows {
           display: flex;
