images servises.html

--- a/servises.html
+++ b/servises.html
@@ -160,7 +160,7 @@
     <div class="services-grid">
       <div class="service-item">
         <div class="title">Central Air Conditioning Systems</div>
-        <img src="air-conditioning.jpg" alt="Air Conditioning">
+        <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
           <span>(Chilled water, VRF, and DX)</span>
           <p class="description">Advanced cooling solutions for residential and commercial spaces.</p>
@@ -168,21 +168,21 @@
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
-        <img src="plumbing.jpg" alt="Plumbing">
+        <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
           <p class="description">Efficient and modern plumbing systems for all structures.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Firefighting Systems</div>
-        <img src="firefighting.jpg" alt="Firefighting">
+        <img src="images/firefighting.jpg" alt="Firefighting">
         <div class="content">
           <p class="description">State-of-the-art fire prevention and safety installations.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Electrical Works</div>
-        <img src="electrical.jpg" alt="Electrical Works">
+        <img src="images/electrical.jpg" alt="Electrical Works">
         <div class="content">
           <span>(Power, Lighting, and Low Current)</span>
           <p class="description">Comprehensive electrical solutions for varied needs.</p>
@@ -190,42 +190,42 @@
       </div>
       <div class="service-item">
         <div class="title">Smart Home Technologies</div>
-        <img src="smart-home.jpg" alt="Smart Home">
+        <img src="images/smart-home.jpg" alt="Smart Home">
         <div class="content">
           <p class="description">Integrated smart solutions for modern living.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Steam Systems</div>
-        <img src="steam.jpg" alt="Steam Systems">
+        <img src="images/steam.jpg" alt="Steam Systems">
         <div class="content">
           <p class="description">Reliable steam systems for industrial and commercial use.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Compressed Air Systems</div>
-        <img src="compressed-air.jpg" alt="Compressed Air Systems">
+        <img src="images/compressed-air.jpg" alt="Compressed Air Systems">
         <div class="content">
           <p class="description">High-efficiency compressed air solutions for your needs.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Heating Systems</div>
-        <img src="heating.jpg" alt="Heating Systems">
+        <img src="images/heating.jpg" alt="Heating Systems">
         <div class="content">
           <p class="description">Modern and energy-efficient heating solutions.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Swimming Pools</div>
-        <img src="swimming-pools.jpg" alt="Swimming Pools">
+        <img src="images/swimming-pools.jpg" alt="Swimming Pools">
         <div class="content">
           <p class="description">Custom-designed swimming pools for homes and resorts.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Medical Gas Systems</div>
-        <img src="medical-gas.jpg" alt="Medical Gas Systems">
+        <img src="images/medical-gas.jpg" alt="Medical Gas Systems">
         <div class="content">
           <p class="description">Specialized gas systems for medical facilities.</p>
         </div>
