--- a/servises.html
+++ b/servises.html
@@ -260,7 +260,7 @@
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
-        <img src="images/plumbing.jpg" alt="Plumbing">
+        <img src="images/Plumbing.jpg" alt="Plumbing">
         <div class="content">
           <p class="description">Efficient and modern plumbing systems for all structures.</p>
         </div>
