--- a/index.html
+++ b/index.html
@@ -569,6 +569,19 @@
         .highlight {
           font-size: 0.8em;
         }
+        .imgDisplay {
+            position: absolute;
+            height: 600px;
+        }
+        .special-text {
+            bottom: 78%;
+        }
+        .arrow {
+            top: 17%;
+        }
+        .content {
+            margin-top: 600px;
+        }
         }
        /* Core Values Container */
       .switching-container {
