--- a/partners.html
+++ b/partners.html
@@ -205,88 +205,136 @@
     <p class="key-clients">Key <span style="color: darkblue;">Partners</span></p>
     <!-- Partner Items -->
     <div class="project-item">
-      <img src="partner1.png" alt="Partner 1" />
+      <img src="images/partner1.png" alt="Partner 1" />
       <p>Volvo</p>
     </div>
     <div class="project-item">
-      <img src="partner2.png" alt="Partner 2" />
+      <img src="images/partner2.png" alt="Partner 2" />
       <p>Aspero</p>
     </div>
     <div class="project-item">
-      <img src="partner3.png" alt="Partner 3" />
+      <img src="images/partner3.png" alt="Partner 3" />
       <p>Cafe del sol</p>
     </div>
     <div class="project-item">
-      <img src="partner4.png" alt="Partner 4" />
+      <img src="images/partner4.png" alt="Partner 4" />
       <p>National Bank of Egypt</p>
     </div>
     <div class="project-item">
-      <img src="partner5.png" alt="Partner 5" />
+      <img src="images/partner5.png" alt="Partner 5" />
       <p>Sodic</p>
     </div>
     <div class="project-item">
-      <img src="partner6.png" alt="Partner 6" />
+      <img src="images/partner6.png" alt="Partner 6" />
       <p>New Giza</p>
     </div>
     <div class="project-item">
-      <img src="partner7.png" alt="Partner 7" />
+      <img src="images/partner7.png" alt="Partner 7" />
       <p>Park St.</p>
     </div>
     <div class="project-item">
-      <img src="partner8.png" alt="Partner 8" />
+      <img src="images/partner8.png" alt="Partner 8" />
       <p>Palm Hills</p>
     </div>
     <div class="project-item">
-      <img src="partner9.png" alt="Partner 9" />
+      <img src="images/partner9.png" alt="Partner 9" />
       <p>Hany Saad Innovations</p>
     </div>
     <div class="project-item">
-      <img src="partner10.png" alt="Partner 10" />
+      <img src="images/partner10.png" alt="Partner 10" />
       <p>Palm Valley</p>
     </div>
     <div class="project-item">
-      <img src="partner11.png" alt="Partner 11" />
+      <img src="images/partner11.png" alt="Partner 11" />
       <p>Smart School</p>
     </div>
     <div class="project-item">
-      <img src="partner12.png" alt="Partner 12" />
+      <img src="images/partner12.png" alt="Partner 12" />
       <p>Concord Plaza</p>
     </div>
     <div class="project-item">
-      <img src="partner13.png" alt="Partner 13" />
+      <img src="images/partner13.png" alt="Partner 13" />
       <p>Cairo Festival City Mall</p>
     </div>
     <div class="project-item">
-      <img src="partner14.png" alt="Partner 14" />
+      <img src="images/partner14.png" alt="Partner 14" />
       <p>Wok and Walk</p>
     </div>
     <div class="project-item">
-      <img src="partner15.png" alt="Partner 15" />
+      <img src="images/partner15.png" alt="Partner 15" />
       <p>Point 90</p>
     </div>
     <div class="project-item">
-      <img src="partner16.png" alt="Partner 16" />
+      <img src="images/partner16.png" alt="Partner 16" />
       <p>Mountain View</p>
     </div>
     <div class="project-item">
-      <img src="partner17.png" alt="Partner 17" />
+      <img src="images/partner17.png" alt="Partner 17" />
       <p>Ain Shams University</p>
     </div>
     <div class="project-item">
-      <img src="partner18.png" alt="Partner 18" />
+      <img src="images/partner18.png" alt="Partner 18" />
       <p>Benha University Hospitals</p>
     </div>
     <div class="project-item">
-      <img src="partner19.png" alt="Partner 19" />
+      <img src="images/partner19.png" alt="Partner 19" />
       <p>Arkan</p>
     </div>
     <div class="project-item">
-      <img src="partner30.jpeg" alt="Partner 20" />
+      <img src="images/partner20.png" alt="Partner 20" />
+      <p>Tradex</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner21.png" alt="Partner 21" />
+      <p>Ain shams University</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner22.png" alt="Partner 22" />
+      <p>Egyptian Police</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner23.png" alt="Partner 23" />
+      <p>Air force Specialized hospital</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner24.png" alt="Partner 24" />
+      <p>National training academy</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner25.png" alt="Partner 25" />
+      <p>StarLight</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner26.png" alt="Partner 26" />
+      <p>AFT chemicals</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner27.png" alt="Partner 27" />
+      <p>Bitter Sweet</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner28.png" alt="Partner 28" />
+      <p>Nour Al-haya Eye center</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner29.png" alt="Partner 29" />
+      <p>Variegato</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner30.png" alt="Partner 30" />
       <p>Optaline</p>
     </div>
     <div class="project-item">
-      <img src="partner22.png" alt="Partner 21" />
-      <p>Egyptian Police</p>
+      <img src="images/partner31.png" alt="Partner 31" />
+      <p>Grand heights</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner32.png" alt="Partner 32" />
+      <p>I-CON Smart Solutions</p>
+    </div>
+    <div class="project-item">
+      <img src="images/partner33.png" alt="Partner 33" />
+      <p>Takhteet</p>
     </div>
   </div>
 
